bin_PROGRAMS = rakarrack
rakarrack_SOURCES = main.C \
	global.h \
	jack.C \
	jack.h \
	rakarrack.cxx \
	rakarrack.h \
	icono_rakarrack_128x128.xpm \
	icono_rakarrack_32x32.xpm \
	process.C \
	fileio.C \
	varios.C \
	Reverb.h \
	Reverb.C \
	AnalogFilter.h \
	Chorus.C \
	Chorus.h \
	EffectLFO.C \
	EffectLFO.h \
	Filter_.h \
	Echo.C \
	Echo.h \
	Phaser.C \
	Phaser.h \
	Distorsion.C \
	Distorsion.h \
	EQ.C \
	EQ.h \
	Compressor.C \
	Compressor.h \
	AnalogFilter.C \
	Alienwah.C \
	Alienwah.h \
	Filter.h \
	Filter.C \
	HarmonicEnhancer.C \
	HarmonicEnhancer.h \
	DynamicFilter.h \
	DynamicFilter.C \
	SVFilter.h \
	SVFilter.C \
	FormantFilter.h \
	FormantFilter.C \
	FilterParams.h \
	FilterParams.C \
	Pan.C \
	Pan.h \
        Harmonizer.C \
        Harmonizer.h \
	smbPitchShift.C \
	smbPitchShift.h \
	Tuner.C \
	Tuner.h \
	MusicDelay.h \
	MusicDelay.C \
	Gate.C \
	Gate.h \
	RecognizeNote.C \
	RecognizeNote.h \
	RecChord.C \
	RecChord.h \
	rkrMIDI.C \
	NewDist.h \
	NewDist.C \
	APhaser.C \
	APhaser.h \
	Dual_Flange.C \
	Dual_Flange.h \
	Exciter.C \
	Exciter.h \
	MBDist.C \
	MBDist.h \
	Valve.C \
	Valve.h \
	Arpie.C \
	Arpie.h \
	Expander.C \
	Expander.h \
	Ring.C \
	Ring.h \
	Shuffle.h \
	Shuffle.C \
	MBVvol.C \
	MBVvol.h \
	Convolotron.h \
	Convolotron.C \
	Synthfilter.C \
	Synthfilter.h \
	Resample.h \
	Resample.C \
	Looper.h \
	Looper.C \
	MIDIConverter.C \
	MIDIConverter.h
	
	
	
		
	
	
	
	
	
	
