bin_PROGRAMS = rakarrack
rakarrack_SOURCES = main.C \
	jack.C \
	rakarrack.cxx \
	process.C \
	fileio.C \
	varios.C \
	Reverb.C \
	Chorus.C \
	EffectLFO.C \
	Echo.C \
	Phaser.C \
	Distorsion.C \
	EQ.C \
	Compressor.C \
	AnalogFilter.C \
	Alienwah.C \
	Filter.C \
	HarmonicEnhancer.C \
	DynamicFilter.C \
	SVFilter.C \
	RBFilter.C \
	FormantFilter.C \
	FilterParams.C \
	Pan.C \
        Harmonizer.C \
	smbPitchShift.C \
	Tuner.C \
	MusicDelay.C \
	Gate.C \
	RecognizeNote.C \
	RecChord.C \
	rkrMIDI.C \
	NewDist.C \
	APhaser.C \
	Dual_Flange.C \
	Exciter.C \
	MBDist.C \
	Valve.C \
	Arpie.C \
	Expander.C \
	Ring.C \
	Shuffle.C \
	MBVvol.C \
	Convolotron.C \
	Synthfilter.C \
	Resample.C \
	Looper.C \
	RyanWah.C \
	MIDIConverter.C
	
	
	
	
		
	
	
	
	
	
	
