docdir = $(prefix)/share/doc/${PACKAGE}/html/imagenes
doc_DATA= icono_rakarrack_128x128.png \
	screen.png \
	jack_conections.jpg \
	bank_mgmt.jpg \
	thema1b.jpg \
	thema2b.jpg \
	thema3b.jpg \
	schema1b.jpg \
	schema2b.jpg \
	settings.jpg \
	midilearn.jpg \
	order.jpg \
	preset_name1.png \
	eq.jpg \
	compresor.jpg \
	dist.jpg \
	ovrd.jpg \
	derelict.jpg \
	eco.jpg \
	chorus.jpg \
	phaser.jpg \
	midi.jpg \
	flanger.jpg \
	tuner1.png \
	reverb.jpg \
	peq.jpg \
	ng.jpg \
	Aphaser.jpg \
	har.jpg \
	cabinet.jpg \
	md.jpg \
	ww.jpg \
	aw.jpg \
	val.jpg \
	ex.jpg \
	exp.jpg \
	ring.jpg \
	df.jpg \
	db.jpg \
	arp.jpg \
	shu.jpg \
	syn.jpg \
	var.jpg \
	loo.jpg \
	mut.jpg \
	con.jpg \
	tap.jpg \
	coi.jpg \
	she.jpg \
	voc.jpg \
	pan.jpg
	
EXTRA_DIST = $(doc_DATA)
